# dowser-python3.9

./: .gitignore  README.md  pyproject.toml
dowser/: CircularBuffer.py  Root.py  __init__.py  app.py  graphs.html  main.css  reftree.py  util.py
test/: simple.py
